# path-search

./: CMakeLists.txt  asearch.pro  astar.cpp  astar.h  globalTypes.h  globalVars.h  main.cpp  myHeap.h  myLog.cpp  myLog.h  myMap.cpp  myMap.h  myNode.cpp  myNode.h  myOutput.cpp  myOutput.h  myTask.cpp  myTask.h  readme.md  repo.pro  report1.md  report_13feb  tagNames.h  tinyxml2.cpp
algorithm/: Close.cpp  Close.h  astar.cpp  astar.h  close.cpp  close.h  coordinats.cpp  heap.h  heuristics.cpp  heuristics.h  jps.cpp  jps.h  node.cpp  node.h  open.cpp  open.h  theta.cpp  theta.h
dataCode/: Map.cpp  Map.h  map.cpp  map.h  myOutput.cpp  myOutput.h  myTask.cpp  myTask.h  output.cpp  output.h  task.cpp  task.h
global/: globalTypes.h  globalVars.cpp  globalVars.h
input/: 3622198.xml  3622198_log.xml  3664933.xml  3664933_log.xml  3839748.xml  3839748_log.xml  4123378.xml  4123378_log.xml  4226598.xml  4226598_log.xml  4320060.xml  4320060_log.xml  4544250.xml  4544250_log.xml  4599865.xml  4599865_log.xml  4662370.xml  4662370_log.xml  4711855.xml  4711855_log.xml  4732990.xml  4732990_log.xml  4759380.xml  4759380_log.xml  4768079.xml  4768079_log.xml  example.xml  exampleWrong (copy).xml  my.xml  my1.xml
logger/: log.cpp  log.h  myLog.cpp  myLog.h
tinyxml/: tinyxml2.h
